# ferth

./: .editorconfig  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  tbump.toml
.github/workflows/: ci.yml  release.yaml
benches/: README.md  core.rs  countdown.fth  countdown.lua  crc32.fth  crc32.lua  deepchain.fth  deepchain.lua  fib.fth  fib.lua  forth.rs  lua.rs  rangesum.fth  rangesum.lua  sieve.fth  sieve.lua
doc/: architecture.md  optimization.md  system.md  words.md
src/: core-ext.fth  core.fth  counted.rs  data.rs  double.rs  error.rs  fe.rs  ferth.rs  header.rs  host.rs  io.rs  kernel.fth  kernel.rs  lib.rs  log.rs  main.rs  packed.rs  parser.rs  state.rs  string.fth  time.rs  tools.fth  types.rs  vm.rs
src/fe/: kernel.rs
src/host/: null.rs  repl.rs  std.rs
src/io/: repl.rs
src/kernel/: boot.rs  builtins.rs  context.rs  dict.rs  env.rs  host.rs  layout.rs
src/vm/: error.rs  op.rs
tests/: core.fr  ttester-shim.fth  ttester.rs
