[package]
name = "ferth"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A safe, native-sized Forth. no_std compatible."
readme = "README.md"
homepage = "https://github.com/benwebber/ferth"
repository = "https://github.com/benwebber/ferth"
keywords = ["forth", "language"]
categories = ["compilers", "no-std"]

[features]
std = []
repl = ["std", "dep:rustyline"]
unsafe = []

[[bin]]
name = "fe"
required-features = ["repl"]

[[bench]]
name = "core"
harness = false

[dependencies]
rustyline = { version = "14", optional = true }

[dev-dependencies]
criterion = "0.8.2"
ferth = { path = ".", features = ["std"] }
