[package]
name = "ferth"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A safe, native-sized Forth. no_std compatible."
readme = "README.md"
homepage = "https://github.com/benwebber/ferth"
repository = "https://github.com/benwebber/ferth"
keywords = ["forth", "language"]
categories = ["compilers", "no-std"]

[features]
std = []
repl = ["std", "time", "dep:rustyline"]
unsafe = []
time = ["std", "dep:chrono"]

[[bin]]
name = "ferth"
required-features = ["std"]

[[bench]]
name = "forth"
harness = false

[[bench]]
name = "lua"
harness = false

[dependencies]
chrono = { version = "0.4.45", optional = true }
rustyline = { version = "14", optional = true }

[dev-dependencies]
criterion = "0.8.2"
ferth = { path = ".", features = ["std"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
